cabal-version: 3.0
name: bytes-metrics
version: 0.1.0.0
synopsis: calculate string metrics on Bytes efficiently
-- description:
homepage: https://github.com/byteverse/bytes-metrics
bug-reports: https://github.com/byteverse/bytes-metrics/issues
license: BSD-3-Clause
license-file: LICENSE
author: Eric Demko
maintainer: edemko@layer3com.com
copyright: 2020 Eric Demko
category: Data
build-type: Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Data.Bytes.Metrics
  -- other-modules:
  -- other-extensions:
  build-depends:
    , base >=4.14 && <5
    , byteslice >=0.2.1 && <0.3
    , contiguous >=0.5
  hs-source-dirs: src
  default-language: Haskell2010
