cabal-version: 3.0
name: bytes-metrics
version: 0.1.0.0
synopsis: calculate string metrics on Bytes efficiently
-- description:
homepage: https://github.com/byteverse/bytes-metrics
bug-reports: https://github.com/byteverse/bytes-metrics/issues
license: BSD-3-Clause
license-file: LICENSE
author: Eric Demko
maintainer: edemko@layer3com.com
copyright: 2020 Eric Demko
category: Data
build-type: Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Data.Bytes.Metrics
  -- other-modules:
  -- other-extensions:
  build-depends:
    , base >=4.14 && <5
    , byteslice >=0.2.1 && <0.3
    , contiguous >=0.6.1
    , primitive >=0.7
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -O2

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options: -Wall -O2
  build-depends:
    , base >=4.12.0.0 && <5
    , bytes-metrics
    , byteslice
    , primitive
    , quickcheck-classes-base >=0.6
    , tasty >=1.2.3
    , tasty-hunit >=0.10.0.2
    , tasty-quickcheck >=0.10

benchmark bench
  type: exitcode-stdio-1.0
  build-depends:
    , base
    , gauge
    , bytes-metrics
    , byteslice
    , random >=1.2
  ghc-options: -Wall -O2
  default-language: Haskell2010
  hs-source-dirs: bench
  main-is: Main.hs
