cabal-version:   3.0
name:            bytes-metrics
version:         0.1.0.0
synopsis:        Calculate string metrics on Bytes efficiently
description:
  Calculate string metrics on Bytes efficiently. This library currently only
  calculates Levenshtein distance, but other metrics may be added in the future.

homepage:        https://github.com/byteverse/bytes-metrics
bug-reports:     https://github.com/byteverse/bytes-metrics/issues
license:         BSD-3-Clause
license-file:    LICENSE
author:          Eric Demko
maintainer:      amartin@layer3com.com
copyright:       2020 Eric Demko
category:        Data
build-type:      Simple
extra-doc-files: CHANGELOG.md
tested-with:     GHC ==9.4.8 || ==9.6.3 || ==9.8.1

common build-settings
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages

library
  import:          build-settings
  exposed-modules: Data.Bytes.Metrics
  build-depends:
    , base        >=4.14  && <5
    , byteslice   >=0.2.1 && <0.3
    , contiguous  >=0.6.1 && <0.7
    , primitive   >=0.7   && <0.10

  hs-source-dirs:  src
  ghc-options:     -O2

test-suite test
  import:         build-settings
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , base              >=4.12.0.0 && <5
    , bytes-metrics
    , byteslice
    , primitive         >=0.7      && <0.10
    , tasty             >=1.2.3
    , tasty-quickcheck  >=0.10

benchmark bench
  import:         build-settings
  type:           exitcode-stdio-1.0
  build-depends:
    , base
    , bytes-metrics
    , byteslice
    , gauge
    , random         >=1.2

  ghc-options:    -O2
  hs-source-dirs: bench
  main-is:        Main.hs

source-repository head
  type:     git
  location: git://github.com/byteverse/bytes-metrics.git
